[package]
name = "rsa_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.4", features = ["derive"]}
clap_complete = "4.5.2"
cxx = "1.0.121"
cxx-build = "1.0.121"

[build-dependencies]
cxx-build = "1.0.121"

