[package]
name = "rsa_tool"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/CJacob314/RSA-Implementation"
authors = ["Jacob Cohen<jacob@jacobcohen.info>"]
description = "Jacob's RSA-Implementation CLI tool to generate keys (both for CLI-only and [website](https://rsa.jacobcohen.dev/)-only use) and encrypt, decrypt, sign, and verify messages."
readme = "./ReadMe.md"
changelog = "./ChangeLog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = {version = "4.5.4", features = ["derive"]}
clap_complete = "4.5.2"
cxx = "1.0.121"
cxx-build = "1.0.121"

[build-dependencies]
cxx-build = "1.0.121"

[profile.release]
opt-level = 3
lto = "fat"
panic = 'abort'
debug = false

[profile.dist]
inherits = "release"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true

[workspace.metadata.dist.dependencies.apt]
libboost-all-dev = '*'

